# ir441

./: Cargo.toml  README.md  package.ps1  package.sh
.github/workflows/: rust.yml  snapshot.yml
examples/: basicloop.ir  basicoo.ir  countdown.ir  gctest1.ir  gctest2.ir  gctest3.ir  gctest4.ir  gctest5.ir  oom.ir  silentbasicloop.ir  silentcountdown.ir  tootrivial.ir  trivial.ir
src/: main.rs
src/ir441/: exec.rs  mod.rs  nodes.rs  parsing.rs
