[package]
name = "ir441"
version = "0.1.0"
authors = ["Colin S. Gordon <csgordon@drexel.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.2.1"
# This requires setting LLVM_SYS_130_PREFIX to the base of an LLVM 13.0 build, as required by inkwell's llvm-ir dependency
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
either = "1.6.1"